--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
     <p id="b">b</p>
   </div>
 </aside>
-<article class="art-blok1">
-  <img id="četkice" src="slike/mima6.png" alt="brush" width="800" height="738" />
+<article id="art" class="art-blok1">
+  <img id="četkice" src="slike/mima6.png" alt="brush" width="822" height="768" />
   <div class="palme">
     <img src="slike/mima4.png" alt="palme" width="1300" height="990"/>
-    <p>Palm trees, acrylic on canvas, 2014</p>
+    <p><i>Palm trees, acrylic on canvas, 2014</i></p>
   </div>
 </article>
 <article class="art-blok2">
   <div class="palme2">
     <img src="slike/mima1.png" alt="palme" width="370" height="464" />
-    <p>Palm trees, acrylic on canvas, 2014</p>
+    <p><i>Palm trees, acrylic on canvas, 2014</i></p>
   </div>
   <div class="palme3">
     <img src="slike/mima5.jpg" alt="palme" width="622" height="464" />
-    <p>Palm trees, acrylic on canvas, 2014</p>
+    <p><i>Palm trees, acrylic on canvas, 2014</i></p>
   </div>
 </article>
 <aside class="about">
@@ -70,7 +70,7 @@
 <article class="planina">
    <div>
      <img src="slike/mima3.png" alt="mountin" width="1100" height="793"/>
-     <p>Palm trees, acrylic on canvas, 2014</p>
+     <p><i>Palm trees, acrylic on canvas, 2014</i></p>
    </div>
   <aside class="about2">
     <pre>
