--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   <meta name="keywords" content="mima, arbid, author, writer, book">
   <meta name="description" content="Mima Arbid is a artist and writer">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="cache-control" content="no-cache">
+  <meta http-equiv="expires" content="0">
+  <meta http-equiv="pragma" content="no-cache">
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css" />
 </head>
 
 <body>
 
-<section id="M" class="mima-arbid">
+<section id="MimaArbid" class="mimaarbid-naslovna">
   <ul class="navigation-bar">
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#books">BOOKS</a></li>
@@ -23,7 +26,7 @@
   </ul>
 </section>
 <aside class="biografija">
-  <img alt="mima-arbid" width="400" height="299" src="slike/bw.png">
+  <img alt="Mima Arbid" width="400" height="299" src="slike/bw.png">
   <div class="biografija-text">
     <p id="a">a</p>
     <pre>
@@ -43,9 +46,9 @@
     <p id="b">b</p>
   </div>
 </aside>
-<article id="art" class="art-blok1">
-  <img id="četkice" src="slike/mima6.png" alt="brush" width="822" height="768" />
-  <div class="palme">
+<article id="art" class="umetnički-blok">
+  <img id="slika-četkice" src="slike/mima6.png" alt="brush" width="822" height="768" />
+  <div class="slika-palme">
     <img src="slike/mima4.png" alt="palme" width="1300" height="990"/>
     <p><i>Palm trees, acrylic on canvas, 2014</i></p>
   </div>
@@ -57,7 +60,7 @@
   </div>
   <div class="palme3">
     <img src="slike/mima5.jpg" alt="palme" width="622" height="464" />
-    <p><i>Palm trees, acrylic on canvas, 2014</i></p>
+    <p>Palm trees, acrylic on canvas, 2014</p>
   </div>
 </article>
 <aside class="about">
@@ -67,19 +70,19 @@
   University of Belgrade.</q>
   </pre>
 </aside>
-<article class="planina">
+<article class="slika-planina">
    <div>
-     <img src="slike/mima3.png" alt="mountin" width="1100" height="793"/>
+     <img src="slike/mima3.png" alt="mounteen" width="1100" height="793"/>
      <p><i>Palm trees, acrylic on canvas, 2014</i></p>
    </div>
-  <aside class="about2">
+  <aside class="slika-planina-text">
     <pre>
       <q>This is a place for a qoute about paintings moved from former as a young adult
       after completing her degree in English and Literature from the.</q>
     </pre>
   </aside>
 </article>
-<article class="mima-personal">
+<article class="mima-lično">
   <img src="slike/mima2.png" width="380" height="376" alt="mimina slika">
   <img src="slike/mima7.png" width="370" height="246" alt="penkalo"/>
 </article>
@@ -93,17 +96,17 @@
   to all the beaty around her. Her mind was back where it all beganall those 
   years ago."
    </pre>
-   <p id="mima">Mima</p>
+   <p id="mima-potpis">Mima</p>
   </aside> 
 <footer>
-  <p id="just-mima">Mima Arbid</p>
-  <p id="pismo">&#9993;</p>
-  <div id="contact" class="contact">
+  <p id="mimaarbid-text">Mima Arbid</p>
+  <p id="pismo-simbol">&#9993;</p>
+  <div id="contact" class="kontakt-imejl">
     <p>Contact:</p>
     <p><a href="mailto: mima.arbid@gmail.com">mima.arbid@gmail.com</a></p>
   </div>
   <p id="facebook"><a href="#mima">ⓕ</a></p>
-  <p id="top"><i><a href="#M">Back to top..</a></i></p>
+  <p id="povratak-na-vrh-strane"><i><a href="#MimaArbid">Back to top..</a></i></p>
 </footer>
 
 </body>
