--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta http-equiv="cache-control" content="no-cache">
   <meta http-equiv="expires" content="0">
   <meta http-equiv="pragma" content="no-cache">
-  <script src="knjiga.js" defer></script>
-  <link rel="stylesheet" href="knjiga.css" />
+  <script src="knjiga.js" async></script>
+  <link rel="stylesheet" href="knjiga.css">
 </head>
 
 <body>
