--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <p><i>Palm trees, acrylic on canvas, 2014</i></p>
   </div>
 </article>
-<article class="art-blok2">
+<article class="umetnički-blok2">
   <div class="palme2">
     <img src="slike/mima1.png" alt="palme" width="370" height="464" />
     <p><i>Palm trees, acrylic on canvas, 2014</i></p>
@@ -106,7 +106,7 @@
     <p><a href="mailto: mima.arbid@gmail.com">mima.arbid@gmail.com</a></p>
   </div>
   <p id="facebook"><a href="#mima">ⓕ</a></p>
-  <p id="povratak-na-vrh-strane"><i><a href="#MimaArbid">Back to top..</a></i></p>
+  <p id="vrh-strane"><i><a href="#MimaArbid">Back to top..</a></i></p>
 </footer>
 
 </body>
