--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <title>Mima Arbid</title>
   <link rel="icon" type="image/x-icon" href="slike/favicon.ico">
+  <meta http-equiv="cache-control" content="no-cache">
+  <meta http-equiv="expires" content="0">
+  <meta http-equiv="pragma" content="no-cache">
   <meta name="author" content="Mima Arbid">
   <meta name="keywords" content="mima, arbid, author, writer, book">
   <meta name="description" content="Mima Arbid is a artist and writer">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="cache-control" content="no-cache">
-  <meta http-equiv="expires" content="0">
-  <meta http-equiv="pragma" content="no-cache">
-  <script src="knjiga.js" async></script>
+  <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css">
 </head>
 
@@ -54,11 +54,11 @@
   </div>
 </article>
 <article class="umetnički-blok2">
-  <div class="palme2">
+  <div class="slika-palme2">
     <img src="slike/mima1.png" alt="palme" width="370" height="464" />
     <p><i>Palm trees, acrylic on canvas, 2014</i></p>
   </div>
-  <div class="palme3">
+  <div class="slika-palme3">
     <img src="slike/mima5.jpg" alt="palme" width="622" height="464" />
     <p>Palm trees, acrylic on canvas, 2014</p>
   </div>
