--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="mima, arbid, author, writer, book">
   <meta name="description" content="Mima Arbid is a artist and writer">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="knjiga.js" defer></script>
+  <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="knjiga.css">
 </head>
 
@@ -105,7 +105,7 @@
     <p>Contact:</p>
     <p><a href="mailto: mima.arbid@gmail.com">mima.arbid@gmail.com</a></p>
   </div>
-  <p id="facebook"><a href="#mima">ⓕ</a></p>
+  <p id="facebook"><a href="#facebook">ⓕ</a></p>
   <p id="vrh-strane"><i><a href="#MimaArbid">Back to top..</a></i></p>
 </footer>
 
