--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <aside class="biografija">
   <img alt="Mima Arbid" width="400" height="299" src="slike/bw.png">
   <div class="biografija-text">
-    <p id="a">a</p>
+    <p id="wingdings-a">a</p>
     <pre>
      Do you believe in destiny? Do you think that everything happens for a 
      reason? Do you ever have that feeling of not belonging?
@@ -40,7 +40,7 @@
      Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta-
      gram or Facebook. Until we meet again! 
     </pre>
-    <p id="b">b</p>
+    <p id="wingdings-b">b</p>
   </div>
 </aside>
 <article id="art" class="umetnički-blok">
@@ -60,7 +60,7 @@
     <p>Palm trees, acrylic on canvas, 2014</p>
   </div>
 </article>
-<aside class="about">
+<aside class="umetnički-blok2-text">
   <pre>
     <q>This is a place for a qoute about paintings moved from former as a young adult
   after completing her degree in English and Literature from the
