--- a/index.html
+++ b/index.html
@@ -106,5 +106,7 @@
   <p id="vrh-strane"><i><a href="#MimaArbid">Back to top..</a></i></p>
 </footer>
 
+<script src="instantclick.min.js" data-no-instant></script>
+<script data-no-instant>InstantClick.init();</script>
 </body>
 </html>
