--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="knjiga.css">
   <link rel="preload" href="slike/pozadina.png" as="image" />
+  <link rel="preload" href="slike/mima-prazno.png" as="image" />
 
 </head>
 
 <body>
 
-<section style="background-image: url('slike/pozadina.png');background-size: 100% 100%;" id="MimaArbid" class="mimaarbid-naslovna">
+<section id="MimaArbid" class="mimaarbid-naslovna">
+  <img src="slike/pozadina.png" alt="naslovna strana" style="display: none" />
   <ul class="navigation-bar">
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#books">BOOKS</a></li>
