--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="knjiga.css">
-  <link rel="preload" href="slike/pozadina.png" as="image" />
+  <link rel="preload" href="slike/pozadinatest.png" as="image" />
   <link rel="preload" href="slike/mima-prazno.png" as="image" />
 
 </head>
 
 <body>
 
-<section id="MimaArbid" class="mimaarbid-naslovna">
-  <img src="slike/pozadina.png" alt="naslovna strana" style="display: none" />
+<section id="MimaArbid" class="mimaarbid-naslovna bg">
+  <img src="slike/pozadinatest.png" alt="naslovna strana" style="display: none"/>
   <ul class="navigation-bar">
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#books">BOOKS</a></li>
@@ -29,6 +29,7 @@
 <aside class="biografija">
   <img alt="Mima Arbid" width="400" height="299" src="slike/bw.png">
   <div class="biografija-text">
+    <img alt="mima" src="slike/mima-prazno.png" style="display: none" />
     <p id="wingdings-a">a</p>
     <pre>
      Do you believe in destiny? Do you think that everything happens for a 
