--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="knjiga.css">
-  <link rel="preload" href="slike/pozadinatest.png" as="image" />
-  <link rel="preload" href="slike/mima-prazno.png" as="image" />
+  <!-- <link rel="preload" href="slike/pozadina.png" as="image" />
+  <link rel="preload" href="slike/mima-prazno.png" as="image" /> -->
 
 </head>
 
 <body>
 
-<section id="MimaArbid" class="mimaarbid-naslovna bg">
+<section id="MimaArbid" class="mimaarbid-naslovna">
   <ul class="navigation-bar">
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#books">BOOKS</a></li>
