--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="knjiga.css">
-  <!-- <link rel="preload" href="slike/pozadina.png" as="image" />
-  <link rel="preload" href="slike/mima-prazno.png" as="image" /> -->
+  <link rel="preload" href="slike/pozadina.png" as="image" />
+  <link rel="preload" href="slike/mima-prazno.png" as="image" /> 
 
 </head>
 
