--- a/index.html
+++ b/index.html
@@ -3,21 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <title>Mima Arbid</title>
-  <link rel="icon" type="image/x-icon" href="slike/favicon.ico">
-  <meta name="author" content="Mima Arbid">
-  <meta name="keywords" content="mima, arbid, author, writer, book">
-  <meta name="description" content="Mima Arbid is a artist and writer">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="slike/favicon.ico" />
+  <meta name="author" content="Mima Arbid" />
+  <meta name="keywords" content="mima, arbid, author, writer, book" />
+  <meta name="description" content="Mima Arbid is a artist and writer" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="knjiga.css">
   <link rel="preload" href="slike/pozadina.png" as="image" />
   <link rel="preload" href="slike/mima-prazno.png" as="image" /> 
-
+  <style>
+    .mimaarbid-naslovna {
+      background-image: url('slike/pozadina.png'); 
+  background-size: 100% 100%; 
+    }
+    .mimaarbid-naslovna img {
+      display: none;
+    }
+  </style>
 </head>
 
 <body>
 
 <section id="MimaArbid" class="mimaarbid-naslovna">
+  <img src="slike/pozadina.png" alt="Slika knjige na plaži" />
   <ul class="navigation-bar">
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#books">BOOKS</a></li>
@@ -26,7 +35,7 @@
   </ul>
 </section>
 <aside class="biografija">
-  <img alt="Mima Arbid" width="400" height="299" src="slike/bw.png">
+  <img alt="Mima Arbid" width="400" height="299" src="slike/bw.png" />
   <div class="biografija-text">
     <p id="wingdings-a">a</p>
     <pre>
