--- a/index.html
+++ b/index.html
@@ -10,23 +10,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="knjiga.css">
-  <link rel="preload" href="slike/pozadina.png" as="image" />
-  <link rel="preload" href="slike/mima-prazno.png" as="image" /> 
-  <style>
-    .mimaarbid-naslovna {
-      background-image: url('slike/pozadina.png'); 
-  background-size: 100% 100%; 
-    }
-    .mimaarbid-naslovna img {
-      display: none;
-    }
-  </style>
 </head>
 
 <body>
 
 <section id="MimaArbid" class="mimaarbid-naslovna">
-  <img src="slike/pozadina.png" alt="Slika knjige na plaži" />
   <ul class="navigation-bar">
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#books">BOOKS</a></li>
@@ -69,7 +57,7 @@
   </div>
   <div class="slika-palme3">
     <img src="slike/mima5.jpg" alt="palme" width="622" height="464" />
-    <p>Palm trees, acrylic on canvas, 2014</p>
+    <p><i>Palm trees, acrylic on canvas, 2014</i></p>
   </div>
 </article>
 <aside class="umetnički-blok2-text">
