--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 
 <section id="MimaArbid" class="mimaarbid-naslovna">
+  <img src="slike/pozadina.png" alt="Mima Arbid" style="display: none;" />
   <ul class="navigation-bar">
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#books">BOOKS</a></li>
