--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </ul>
 </section>
 <aside class="biografija">
-  <img alt="Mima Arbid" width="400" height="299" src="slike/bw.png" />
+  <img alt="Mima's picture" width="400" height="299" src="slike/bw.png" />
   <div class="biografija-text">
     <p id="wingdings-a">a</p>
     <pre>
@@ -44,19 +44,19 @@
   </div>
 </aside>
 <article id="art" class="umetnički-blok">
-  <img id="slika-četkice" src="slike/mima6.png" alt="brush" width="822" height="768" />
+  <img id="slika-četkice" src="slike/mima6.png" alt="Painting Brushes" width="822" height="768" />
   <div class="slika-palme">
-    <img src="slike/mima4.png" alt="palme" width="1300" height="990"/>
+    <img src="slike/mima4.png" alt="Palm trees" width="1300" height="990"/>
     <p><i>Palm trees, acrylic on canvas, 2014</i></p>
   </div>
 </article>
 <article class="umetnički-blok2">
   <div class="slika-palme2">
-    <img src="slike/mima1.png" alt="palme" width="370" height="464" />
+    <img src="slike/mima1.png" alt="Palm trees" width="370" height="464" />
     <p><i>Palm trees, acrylic on canvas, 2014</i></p>
   </div>
   <div class="slika-palme3">
-    <img src="slike/mima5.jpg" alt="palme" width="622" height="464" />
+    <img src="slike/mima5.jpg" alt="Palm trees" width="622" height="464" />
     <p><i>Palm trees, acrylic on canvas, 2014</i></p>
   </div>
 </article>
@@ -69,7 +69,7 @@
 </aside>
 <article class="slika-planina">
    <div>
-     <img src="slike/mima3.png" alt="mounteen" width="1100" height="793"/>
+     <img src="slike/mima3.png" alt="A picture of a mountain and a river" width="1100" height="793"/>
      <p><i>Palm trees, acrylic on canvas, 2014</i></p>
    </div>
   <aside class="slika-planina-text">
@@ -80,8 +80,8 @@
   </aside>
 </article>
 <article class="mima-lično">
-  <img src="slike/mima2.png" width="380" height="376" alt="mimina slika">
-  <img src="slike/mima7.png" width="370" height="246" alt="penkalo"/>
+  <img src="slike/mima2.png" width="380" height="376" alt="Mima's picture">
+  <img src="slike/mima7.png" width="370" height="246" alt="pen"/>
 </article>
 <aside class="mima-text">
   <pre>
@@ -102,7 +102,7 @@
     <p>Contact:</p>
     <p><a href="mailto: mima.arbid@gmail.com">mima.arbid@gmail.com</a></p>
   </div>
-  <p id="facebook"><a href="#facebook">ⓕ</a></p>
+  <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
   <p id="vrh-strane"><i><a href="#MimaArbid">Back to top..</a></i></p>
 </footer>
 
