--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mima Arbid</title>
   <link rel="icon" type="image/x-icon" href="slike/favicon.ico" />
   <meta name="author" content="Mima Arbid" />
-  <meta name="keywords" content="mima, arbid, author, writer, book" />
+  <meta name="keywords" content="mima, arbid, i do not belong, writer, book" />
   <meta name="description" content="Mima Arbid is a artist and writer" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="knjiga.js" async></script>
