--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="knjiga.css">
+  <style>
+    .mimaarbid-naslovna {
+  background-image: url('slike/pozadina.png'); 
+  background-size: cover; 
+  height: 49.2vw;
+  display: flex;
+}
+@media screen and (max-width: 767px) {
+  .mimaarbid-naslovna {
+    justify-content: space-around;
+    background-image: url('slike/mobilni.png'); 
+    background-size: cover; 
+    height:92.1vw;
+  }
+   .navigation-bar {
+    margin-top: 4.3%;
+    margin-left: -7%;
+  }
+  .navigation-bar li a {
+    font-size: 2.6vw;
+    padding: 0 17px;
+    letter-spacing: 2.3px;
+  }
+}
+  </style>
 </head>
 
 <body>
