--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 </article>
 <aside class="umetnički-blok2-text">
   <pre>
-    <q>This is a place for a qoute about paintings moved from former as a young adult
+  " This is a place for a qoute about paintings moved from former as a young adult
   after completing her degree in English and Literature from the
-  University of Belgrade.</q>
+  University of Belgrade."
   </pre>
 </aside>
 <article class="slika-planina">
@@ -74,8 +74,8 @@
    </div>
   <aside class="slika-planina-text">
     <pre>
-      <q>This is a place for a qoute about paintings moved from former as a young adult
-      after completing her degree in English and Literature from the.</q>
+      " This is a place for a qoute about paintings moved from former as a young adult
+      after completing her degree in English and Literature from the."
     </pre>
   </aside>
 </article>
