--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<section style=" background-image: url('slike/pozadina.png');background-size: cover;" id="MimaArbid" class="mimaarbid-naslovna">
+<section  id="MimaArbid" class="mimaarbid-naslovna">
   <ul class="navigation-bar">
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#books">BOOKS</a></li>
