--- a/index.html
+++ b/index.html
@@ -47,37 +47,36 @@
   <img id="slika-četkice" src="slike/mima6.png" alt="Painting Brushes" width="822" height="768" />
   <div class="slika-palme">
     <img src="slike/mima4.png" alt="Palm trees" width="1300" height="990"/>
-    <p><i>Palm trees, acrylic on canvas, 2014</i></p>
+    <p><i>Palm trees, acrylic on canvas, 2009</i></p>
   </div>
 </article>
 <article class="umetnički-blok2">
   <div class="slika-palme2">
     <img src="slike/mima1.png" alt="Palm trees" width="370" height="464" />
-    <p><i>Palm trees, acrylic on canvas, 2014</i></p>
+    <p><i>Palm trees, acrylic on canvas, 2009</i></p>
   </div>
   <div class="slika-palme3">
     <img src="slike/mima5.jpg" alt="Palm trees" width="622" height="464" />
-    <p><i>Palm trees, acrylic on canvas, 2014</i></p>
+    <p><i>Palm trees, acrylic on canvas, 2009</i></p>
   </div>
 </article>
 <aside class="umetnički-blok2-text">
   <pre>
-  " This is a place for a qoute about paintings moved from former as a young adult
-  after completing her degree in English and Literature from the
-  University of Belgrade."
+  " There's no other trees that I like more
+  than palm trees. They are what I see when I close my eyes.
+  Palm trees, beaches and perpetual sunshine..."
   </pre>
 </aside>
 <article class="slika-planina">
    <div>
      <img src="slike/mima3.png" alt="A picture of a mountain and a river" width="1100" height="793"/>
-     <p><i>Palm trees, acrylic on canvas, 2014</i></p>
+     <p><i>Landscape, oil on canvas, 2010</i></p>
    </div>
-  <aside class="slika-planina-text">
-    <pre>
-      " This is a place for a qoute about paintings moved from former as a young adult
-      after completing her degree in English and Literature from the."
-    </pre>
-  </aside>
+</article>
+<article class="knjige">
+  <p>
+    Books
+  </p>
 </article>
 <article class="mima-lično">
   <img src="slike/mima2.png" width="380" height="376" alt="Mima's picture">
