--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <p><i>Landscape, oil on canvas, 2010</i></p>
   </div>
 </article>
-<article class="knjige">
+<article id="books" class="knjige">
   <p>
     Books
   </p>
