--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 <article class="umetnički-blok2">
   <div class="slika-palme2">
     <img src="slike/mima1.png" alt="Palm trees" width="370" height="464" />
-    <p><i>Palm trees, acrylic on canvas, 2009</i></p>
+    <p><i>Palm trees, acrylic on canvas</i></p>
   </div>
   <div class="slika-palme3">
     <img src="slike/mima5.png" alt="Palm trees" width="622" height="464" />
-    <p><i>Palm trees, acrylic on canvas, 2009</i></p>
+    <p><i>Palm trees, acrylic on canvas</i></p>
   </div>
 </article>
 <aside class="slika-text">
@@ -70,8 +70,8 @@
 </aside>
 <article class="slika-planina">
   <div>
-    <img src="slike/mima3.png" alt="A picture of a mountain and a river" width="1100" height="793" />
-    <p><i>Landscape, oil on canvas, 2010</i></p>
+    <img src="slike/mima3.png" alt="A picture of a mountain and a river" width="800" height="577" />
+    <p><i>Landscape, oil on canvas</i></p>
   </div>
 </article>
 <article id="books" class="knjige">
