--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="knjiga.css" />
+  <link rel="preload" href="slike/pozadina.png" as="image" />
+  <link rel="preload" href="slike/mobilni.png" as="image" />
 </head>
 
 <body>
