--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="knjiga.css" />
   <link rel="preload" href="slike/pozadina.png" as="image" />
   <link rel="preload" href="slike/mobilni.png" as="image" />
+  <link rel="preload" href="slike/mima-prazno.png" as="image" />
 </head>
 
 <body>
