--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <img id="slika-četkice" src="slike/mima6.png" alt="Painting Brushes" width="300" height="280" />
   <div class="slika-palme">
     <img src="slike/mima4.png" alt="Palm trees" width="880" height="675" />
-    <p><i>Palm trees, acrylic on canvas, 2009</i></p>
+    <p><i>Palm trees, acrylic on canvas</i></p>
   </div>
 </article>
 <article class="umetnički-blok2">
