--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
 <aside id="mimaabout">
   <div class="mimaarbid">
     <header>ABOUT THE AUTOR</header>
-    <p></p>
+    <p>Mima Arbid moved from former Yugoslavia as young adult after completing her degree
+      in English and Literature from University of Belgrade. She has traveled the world
+      embracing different cultures. Mima is a mother, wife, artist and writer.
+      I DO NOT BELONG is her first novel.</p>
   </div>
 </aside> 
 <footer>
