--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
   </div>
 </aside>
 <article id="art" class="umetnički-blok">
-  <img id="slika-četkice" src="slike/mima6.png" alt="Painting Brushes" width="300" height="280" />
+  <div class="slika-četkice-text">
+    <h2>I DO NOT BELONG</h2>
+    <p>After losing her father, the loving source of affection to her,
+       young Emma longs to leave the country she never felt she belonged to...
+    </p>
+  </div>
+  <div class="slika-četkice">
+    <img  src="slike/mima6.png" alt="Painting Brushes" width="300" height="280" />
+  </div>
+  </div>
   <div class="slika-palme">
     <img src="slike/mima4.png" alt="Palm trees" width="880" height="675" />
     <p><i>Palm trees, acrylic on canvas</i></p>
@@ -94,7 +103,7 @@
   ago. She seemed completely oblivious to all the beaty around her. Her mind
   was back where it all began all those years ago. She seemed completely oblivious
   to all the beaty around her. Her mind was back where it all began all those 
-  years ago."
+  years ago..." From I DO NOT BELONG
     </p>
     <p id="mima-potpis">Mima</p>
   </aside>
