--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="knjiga.css" />
   <link rel="preload" href="slike/pozadina.png" as="image" type="image/webp" />
-  <link rel="preload" href="slike/mima-prazno.png" as="image" />
 </head>
 
 <body>
@@ -88,7 +87,7 @@
 <article id="books" class="knjige">
   <p>BOOKS</p>
   <div class="knjige-izdanja">
-    <p><em>- First book : I DO NOT BELONG</em></p>
+    <p><em>- First book : <a href="https://www.amazon.com/Mima-Arbid/e/B09TTP9TL4%3Fref=dbs_a_mng_rwt_scns_share">I DO NOT BELONG</a></em></p>
     <p><em>- Working on second book</em></p>
   </div>
  </article>
