--- a/index.html
+++ b/index.html
@@ -96,13 +96,11 @@
   <img src="slike/mima7.png" width="400" height="266" alt="pen"/>
   <aside class="mima-text">
     <p>
-  "She seemed completely oblivious to all the beaty around her. Her mind was 
-  back where it all began all those years ago. She seemed completely oblivious to 
-  all the beaty around her. Her mind was back where it all began all those years 
-  ago. She seemed completely oblivious to all the beaty around her. Her mind
-  was back where it all began all those years ago. She seemed completely oblivious
-  to all the beaty around her. Her mind was back where it all began all those 
-  years ago..." From I DO NOT BELONG
+      "She seemed completely oblivious to the beauty around her.
+      Her mind was backwhere it all began all those years ago.
+      Tears rolled down her cheeks as, once again, she was that
+      insecure, confused, devastated twelve-year-old..."
+      From I DO NOT BELONG
     </p>
     <p id="mima-potpis">Mima</p>
   </aside>
