--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css" />
-  <link rel="preload" href="slike/pozadina.png" as="image" type="image/webp" />
+  <link rel="preload" href="slike/pozadina.png" as="image" />
 </head>
 
 <body>
