--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Mima Arbid, Books, Writer, Art" />
   <meta name="description" content="Introduction of Mima Arbid's writing and artistic opus" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="knjiga.js" defer></script>
+  <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="knjiga.css" />
   <link rel="preload" href="slike/pozadina.png" as="image" />
 </head>
@@ -107,11 +107,13 @@
 </article>
 <aside id="mimaabout">
   <div class="mimaarbid">
-    <header>ABOUT THE AUTOR</header>
-    <p>Mima Arbid moved from former Yugoslavia as young adult after completing her degree
-      in English and Literature from University of Belgrade. She has traveled the world
-      embracing different cultures. Mima is a mother, wife, artist and writer.
-      I DO NOT BELONG is her first novel.</p>
+    <header>ABOUT THE AUTHOR</header>
+    <pre>
+    Mima Arbid moved from former Yugoslavia as young adult after completing her degree
+    in English and Literature from University of Belgrade. She has traveled the world
+    embracing different cultures. Mima is a mother, wife, artist and writer.
+    I DO NOT BELONG is her first novel.
+    </pre>
   </div>
 </aside> 
 <footer>
