--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <p>BOOKS</p>
   <div class="knjige-izdanja">
     <p><em>- First book : <a href="https://www.amazon.com/Mima-Arbid/e/B09TTP9TL4%3Fref=dbs_a_mng_rwt_scns_share">I DO NOT BELONG</a></em></p>
-    <p><em>- Working on second book</em></p>
+    <p><em>- Working on the second book</em></p>
   </div>
  </article>
 <article class="mima-lično">
@@ -109,7 +109,7 @@
   <div class="mimaarbid">
     <header>ABOUT THE AUTHOR</header>
     <pre>
-    Mima Arbid moved from former Yugoslavia as young adult after completing her degree
+    Mima Arbid moved from former Yugoslavia as a young adult after completing her degree
     in English and Literature from University of Belgrade. She has traveled the world
     embracing different cultures. Mima is a mother, wife, artist and writer.
     I DO NOT BELONG is her first novel.
@@ -121,7 +121,7 @@
   <p id="pismo-simbol">&#9993;</p>
   <div id="contact" class="kontakt-imejl">
     <p>Contact:</p>
-    <p><a href="mailto: mima.arbid@gmail.com">mima.arbid@gmail.com</a></p>
+    <p><a href="mailto: mimaarbid@gmail.com">mima.arbid@gmail.com</a></p>
   </div>
   <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
   <!-- <p id="vrh-strane"><i><a href="#MimaArbid">Back to top..</a></i></p> -->
