--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <p id="pismo-simbol">&#9993;</p>
   <div id="contact" class="kontakt-imejl">
     <p>Contact:</p>
-    <p><a href="mailto: mimaarbid@gmail.com">mima.arbid@gmail.com</a></p>
+    <p><a href="mailto: mimaarbid@gmail.com">mimaarbid@gmail.com</a></p>
   </div>
   <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
   <!-- <p id="vrh-strane"><i><a href="#MimaArbid">Back to top..</a></i></p> -->
