--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       Her mind was backwhere it all began all those years ago.
       Tears rolled down her cheeks as, once again, she was that
       insecure, confused, devastated twelve-year-old..."
-      From I DO NOT BELONG
+      <p>From I DO NOT BELONG</p>
     </p>
     <p id="mima-potpis">Mima</p>
   </aside>
