--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Mima Arbid, Books, Writer, Art" />
   <meta name="description" content="Introduction of Mima Arbid's writing and artistic opus" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="knjiga.js" async></script>
+  <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css" />
   <link rel="preload" href="slike/pozadina.png" as="image" />
 </head>
@@ -106,7 +106,7 @@
   </aside>
 </article>
 <aside id="mimaabout">
-  <div class="mimaarbid">
+  <div class="mimaarbid" id="about">
     <header>ABOUT THE AUTHOR</header>
     <pre>
     Mima Arbid moved from former Yugoslavia as a young adult after completing her degree
