--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <aside class="biografija">
   <img alt="Mima's picture" width="409" height="307" src="slike/bw.png" />
   <div class="biografija-text">
-    <p >&#97;</p>
+    <p id="wingdings-a">&#97;</p>
     <pre>
      Do you believe in destiny?
      Do you think that everything happens for a reason? 
