--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
   <div class="slika-četkice">
     <img  src="slike/mima6.png" alt="Painting Brushes" width="300" height="280" />
   </div>
-  </div>
   <div class="slika-palme">
     <img src="slike/mima4.png" alt="Palm trees" width="630" height="483" />
     <p><i>Palm trees, acrylic on canvas</i></p>
@@ -124,7 +123,7 @@
     <p><a href="mailto: mimaarbid@gmail.com">mimaarbid@gmail.com</a></p>
   </div>
   <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
-  <!-- <p id="vrh-strane"><i><a href="#MimaArbid">Back to top..</a></i></p> -->
+  <p id="vrh-strane"><i><a href="#MimaArbid">Back to Top..</a></i></p>
 </footer>
 
 </body>
