--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="knjiga.css" />
   <link rel="stylesheet" href="responsive.css" />
   <link rel="preload" href="slike/pozadina.png" as="image" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -103,7 +104,8 @@
 </aside> 
 <footer>
   <p id="mimaarbid-text">Mima Arbid</p>
-  <p id="pismo-simbol">&#9993;</p>
+  <!--<p id="pismo-simbol">&#9993;</p>-->
+  <div id="pismo" class="fa fa-envelope fa-4x"></div>
   <div id="contact" class="kontakt-imejl">
     <p>Contact:</p>
     <p><a href="mailto: mimaarbid@gmail.com">mimaarbid@gmail.com</a></p>
