--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
 </article>
 <article id="books" class="knjige">
-  <p>BOOKS</p>
+  <p>BOOKS<!-- <span><img alt="Symbol of book" width="70px" height="70px" /></span> --></p>
   <div class="knjige-izdanja">
     <p><em>- First book : <a href="https://www.amazon.com/Mima-Arbid/e/B09TTP9TL4%3Fref=dbs_a_mng_rwt_scns_share">I DO NOT BELONG</a></em></p>
     <p><em>- Working on the second book</em></p>
