--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
   <link rel="stylesheet" href="knjiga.css" />
   <link rel="stylesheet" href="responsive.css" />
   <link rel="preload" href="slike/pozadina.png" as="image" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
 </head>
 
 <body>
 
 <section  id="MimaArbid" class="mimaarbid-naslovna">
-  <header>Mima Arbid</header>
   <ul class="navigation-bar">
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#books">BOOKS</a></li>
@@ -29,7 +28,22 @@
 <aside class="biografija">
   <img alt="Mima's picture" width="409" height="307" src="slike/bw.png" />
   <div class="biografija-text">
-    <!-- Uvodni text (Unosi se preko java skripta) -->
+    <p id="wingdings-a">&#97;</p>
+    <pre>
+    Do you believe in destiny?
+     Do you think that everything happens for a reason? 
+     Do you ever have that feeling of not belonging?
+    <a href="https://www.goodreads.com/book/show/56043154-i-do-not-belong">I DO NOT BELONG</a> is a story of a young girl desperately trying 
+    to find herself and her place in the world after a tragic event 
+    in her life. A chance encounter with an elderly American 
+    couple and a misunderstanding on their part changes her life forever.
+    She is catapulted into a new world searching for her destiny. 
+    Will she ever find it? 
+    It's a relatable story inspired by true events. 
+    An easy and fast read. 
+    On Amazon, in paperback and kindle.
+    </pre>
+    <p id="wingdings-b">b</p>
   </div>
 </aside>
 <article id="art" class="umetnički-blok">
@@ -71,13 +85,13 @@
   </div>
 </article>
 <article id="books" class="knjige">
-  <p>BOOKS<!-- <span><img alt="Symbol of book" width="70px" height="70px" /></span> --></p>
+  <p>BOOKS</p>
   <div class="knjige-izdanja">
     <p><em>- First book : <a href="https://www.amazon.com/Mima-Arbid/e/B09TTP9TL4%3Fref=dbs_a_mng_rwt_scns_share">I DO NOT BELONG</a></em></p>
     <p><em>- Working on the second book</em></p>
   </div>
  </article>
-<article class="mima-lično">
+ <article class="mima-lično">
   <img src="slike/mima2.png" width="380" height="376" alt="Mima's picture">
   <img src="slike/mima7.png" width="400" height="266" alt="pen"/>
   <aside class="mima-text">
@@ -104,7 +118,6 @@
 </aside> 
 <footer>
   <p id="mimaarbid-text">Mima Arbid</p>
-  <!--<p id="pismo-simbol">&#9993;</p>-->
   <div id="pismo" class="fa fa-envelope fa-3x"></div>
   <div id="contact" class="kontakt-imejl">
     <p>Contact:</p>
