--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Introduction of Mima Arbid's writing and artistic opus" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="knjiga.js" defer></script>
-  <link rel="preload" as="style" href="knjiga.css" />
+  <link rel="stylesheet" href="knjiga.css" />
   <link rel="stylesheet" href="responsive.css" />
   <link rel="preload" href="slike/pozadina.png" as="image" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
