--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="responsive.css" />
   <link rel="preload" href="slike/pozadina.png" as="image" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
 </head>
 
 <body>
