--- a/index.html
+++ b/index.html
@@ -29,22 +29,7 @@
 <aside class="biografija">
   <img alt="Mima's picture" width="409" height="307" src="slike/bw.png" />
   <div class="biografija-text">
-    <p id="wingdings-a">&#97;</p>
-    <pre>
-    Do you believe in destiny?
-     Do you think that everything happens for a reason? 
-     Do you ever have that feeling of not belonging?
-    <a href="https://www.goodreads.com/book/show/56043154-i-do-not-belong">I DO NOT BELONG</a> is a story of a young girl desperately trying 
-    to find herself and her place in the world after a tragic event 
-    in her life. A chance encounter with an elderly American 
-    couple and a misunderstanding on their part changes her life forever.
-    She is catapulted into a new world searching for her destiny. 
-    Will she ever find it? 
-    It's a relatable story inspired by true events. 
-    An easy and fast read. 
-    On Amazon, in paperback and kindle.
-    </pre>
-    <p id="wingdings-b">b</p>
+   <!-- Biografija/text -->
   </div>
 </aside>
 <article id="art" class="umetnički-blok">
@@ -73,11 +58,9 @@
   </div>
 </article>
 <aside class="slika-text">
-  <p>
-  "There's no other trees that I like more
-  than palm trees. They are what I see when I close my eyes.
-  Palm trees, beaches and perpetual sunshine..."
-  </p>
+    <p>"There's no other trees that I like more than palm trees.</p>
+    <p>They are what I see when I close my eyes.</p>
+    <p>Palm trees, beaches and perpetual sunshine..."</p>
 </aside>
 <article class="slika-planina">
   <div>
@@ -94,7 +77,7 @@
  </article>
  <article class="mima-lično">
   <img src="slike/mima2.png" width="380" height="376" alt="Mima's picture">
-  <img src="slike/mima7.png" width="400" height="266" alt="pen"/>
+  <img src="slike/mima7.png" width="400" height="266" alt="Pen"/>
   <aside class="mima-text">
     <p>
       "She seemed completely oblivious to the beauty around her.
