--- a/index.html
+++ b/index.html
@@ -8,35 +8,14 @@
   <meta name="keywords" content="Mima Arbid, Books, Writer, Art" />
   <meta name="description" content="Introduction of Mima Arbid's writing and artistic opus" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preload" href="knjiga.css" as="style" />
   <link rel="stylesheet" href="knjiga.css" />
   <link rel="stylesheet" href="responsive.css" />
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento" />
   <style>
-    /*PRVA SEKCIJA: Početna
------------------------------------------------------------- */
-    .mimaarbid-naslovna {
-  background-image: url('slike/pozadina.png');
-  background-size: cover;
-  height: 49.2vw;
-  display: flex;
-    }
-   .navigation-bar {
-  display: flex;
-  justify-content: flex-end;
-  list-style-type: none;
-  margin-top: 4.2%;
-  margin-left: 58%;
-    }
-    .navigation-bar li a {
-  color:white;
-  font-family: "Montserrat",  Helvetica, sans-serif;
-  font-size: 1.2vw;
-  padding: 0 16px;
-  text-decoration: none;
-  letter-spacing: 2.4px;
-    }
+
   </style>
 </head>
 
