--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
   <meta name="keywords" content="Mima Arbid, Books, Writer, Art" />
   <meta name="description" content="Introduction of Mima Arbid's writing and artistic opus" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preload" href="slike/pozadina.png" as="image" />
   <link rel="preload" href="knjiga.css" as="style" />
   <link rel="stylesheet" href="knjiga.css" />
   <link rel="stylesheet" href="responsive.css" />
-  <script src="knjiga.js" defer></script>
+  <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento" />
-  <style>
-
-  </style>
 </head>
 
 <body>
