--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="knjiga.js" async></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento" />
+  <style></style>
 </head>
 
 <body>
