--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preload" href="knjiga.css" as="style" />
   <link rel="stylesheet" href="knjiga.css" />
   <link rel="stylesheet" href="responsive.css" />
-  <script src="knjiga.js" async></script>
+  <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento" />
 </head>
@@ -31,22 +31,6 @@
   <img alt="Mima's picture" width="409" height="307" src="slike/bw.png" />
   <div class="biografija-text">
    <!-- Biografija/text -->
-   <p id="wingdings-a">&#97;</p>
-   <pre>
-   Do you believe in destiny?
-    Do you think that everything happens for a reason? 
-    Do you ever have that feeling of not belonging?
-   <a href="https://www.goodreads.com/book/show/56043154-i-do-not-belong">I DO NOT BELONG</a> is a story of a young girl desperately trying 
-   to find herself and her place in the world after a tragic event 
-   in her life. A chance encounter with an elderly American 
-   couple and a misunderstanding on their part changes her life forever.
-   She is catapulted into a new world searching for her destiny. 
-   Will she ever find it? 
-   It's a relatable story inspired by true events. 
-   An easy and fast read. 
-   On Amazon, in paperback and kindle.
-   </pre>
-   <p id="wingdings-b">b</p>
   </div>
 </aside>
 <article id="art" class="umetnički-blok">
