--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <aside class="mima-text">
     <p>
       "She seemed completely oblivious to the beauty around her.
-      Her mind was backwhere it all began all those years ago.
+      Her mind was back where it all began all those years ago.
       Tears rolled down her cheeks as, once again, she was that
       insecure, confused, devastated twelve-year-old..."
       <p>From I DO NOT BELONG</p>
@@ -106,7 +106,7 @@
   <div id="pismo" class="fa fa-envelope fa-3x"></div>
   <div id="contact" class="kontakt-imejl">
     <p>Contact:</p>
-    <p><a href="mailto: mimaarbid@gmail.com">mimaarbid@gmail.com</a></p>
+    <p><a href="mailto: mimaarbidbook@gmail.com">mimaarbidbook@gmail.com</a></p>
   </div>
   <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
   <p id="vrh-strane"><i><a href="#MimaArbid">Back to Top..</a></i></p>
