--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <div id="pismo" class="fa fa-envelope fa-3x"></div>
   <div id="contact" class="kontakt-imejl">
     <p>Contact:</p>
-    <p><a href="mailto: mimaarbidbook@gmail.com">mimaarbidbook@gmail.com</a></p>
+    <p><a href="mailto: mimaarbidbook@gmail.com">mimaarbid@gmail.com</a></p>
   </div>
   <p id="facebook"><a href="https://m.facebook.com/people/Mima-Arbid/100078719047201/">ⓕ</a></p>
   <p id="vrh-strane"><i><a href="#MimaArbid">Back to Top..</a></i></p>
