index update text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,25 @@
 <aside class="biografija">
   <img alt="Mima's picture" width="409" height="307" src="slike/bw.png" />
   <div class="biografija-text">
-   <!-- Biografija/text -->
+    <pre>
+    Do you believe in destiny?
+    Do you think that everything happens 
+    for a reason? Do you ever have that 
+    feeling of not belonging?
+    <a href="https://www.goodreads.com/book/show/56043154-i-do-not-belong">I DO NOT BELONG</a> is a story of a
+    young girl desperately trying to find 
+    herself and her place in the world after
+    a tragic event in her life. A chance 
+    encounter with an elderly 
+    American couple and a misunderstanding 
+    on their part changes her life forever. 
+    She is catapulted into a new  world 
+    searching for her destiny. 
+    Will she ever find it? 
+    It's a relatable story inspired 
+    by true events. An easy and fast read. 
+    On Amazon, in paperback and kindle.
+    </pre>
   </div>
 </aside>
 <article id="art" class="umetnički-blok">
