--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preload" href="slike/pozadina.png" as="image" />
   <lin rel="preload" href="slike/mobilni.png" as="image" />
-  <link rel="stylesheet" href="knjiga.css" />
-  <link rel="stylesheet" href="responsive.css" />
+  <link rel="stylesheet" href="knjiga.css" as="style" />
+  <link rel="stylesheet" href="responsive.css" as="style" />
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento" />
